--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ html>
 <html>
 <head>
     <title>Warrior Battle Run</title>
@@ -62,7 +62,4 @@
         }
 
         window.addEventListener('touchmove', e => { px = e.touches[0].clientX; });
-        window.addEventListener('mousemove', e => { px = e.clientX; });
-    </script>
-</body>
-</html>
+        window.addEventListener('mousemove', e => { px
