--- a/index.html
+++ b/index.html
@@ -1,68 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Warrior Army Run 3D</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <style>
-        body { margin: 0; overflow: hidden; background: #87CEEB; font-family: 'Arial', sans-serif; }
-        #ui { position: absolute; top: 20px; width: 100%; text-align: center; color: white; font-size: 32px; font-weight: bold; text-shadow: 2px 2px 5px #000; pointer-events: none; z-index: 10; }
-        #startBtn { position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); padding: 20px 40px; background: #ff4757; color: white; border: none; border-radius: 50px; font-size: 24px; cursor: pointer; z-index: 100; }
-    </style>
-</head>
-<body>
-    <button id="startBtn" onclick="startGame()">START BATTLE ⚔️</button>
-    <div id="ui">ARMY: <span id="score">1</span></div>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-
-    <script>
-        let scene, camera, renderer, player, army = [], gates = [], enemies = [], isStarted = false;
-        let score = 1, moveX = 0;
-
-        function startGame() {
-            document.getElementById('startBtn').style.display = 'none';
-            isStarted = true;
-            init();
-        }
-
-        function createHumanoid(color) {
-            const group = new THREE.Group();
-            // Body
-            const body = new THREE.Mesh(new THREE.CapsuleGeometry(0.3, 0.6, 4, 8), new THREE.MeshStandardMaterial({color: color}));
-            body.position.y = 0.8;
-            group.add(body);
-            // Head
-            const head = new THREE.Mesh(new THREE.SphereGeometry(0.25, 16, 16), new THREE.MeshStandardMaterial({color: color}));
-            head.position.y = 1.4;
-            group.add(head);
-            // Arms
-            const armGeo = new THREE.CapsuleGeometry(0.08, 0.4, 4, 8);
-            const armL = new THREE.Mesh(armGeo, new THREE.MeshStandardMaterial({color: color}));
-            armL.position.set(-0.4, 1.1, 0);
-            group.add(armL);
-            const armR = armL.clone();
-            armR.position.x = 0.4;
-            group.add(armR);
-            return group;
-        }
-
-        function init() {
-            scene = new THREE.Scene();
-            scene.background = new THREE.Color(0x87CEEB);
-            scene.fog = new THREE.Fog(0x87CEEB, 20, 100);
-
-            camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
-            renderer = new THREE.WebGLRenderer({ antialias: true });
-            renderer.setSize(window.innerWidth, window.innerHeight);
-            document.body.appendChild(renderer.domElement);
-
-            const light = new THREE.DirectionalLight(0xffffff, 1);
-            light.position.set(5, 10, 7);
-            scene.add(light);
-            scene.add(new THREE.AmbientLight(0x404040));
-
-            // Road
-            const road = new THREE.Mesh(new THREE.PlaneGeometry(10, 1000), new THREE.MeshStandardMaterial({color: 0x444444}));
+ road = new THREE.Mesh(new THREE.PlaneGeometry(10, 1000), new THREE.MeshStandardMaterial({color: 0x444444}));
             road.rotation.x = -Math.PI / 2;
             scene.add(road);
 
