--- a/index.html
+++ b/index.html
@@ -1,73 +1,136 @@
- road = new THREE.Mesh(new THREE.PlaneGeometry(10, 1000), new THREE.MeshStandardMaterial({color: 0x444444}));
+<!DOCTYPE html>
+<html>
+<head>
+    <title>3D Super Car Racer</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <style>
+        body { margin: 0; overflow: hidden; background: #333; font-family: sans-serif; }
+        #gameGui { position: absolute; top: 20px; width: 100%; text-align: center; color: white; font-size: 24px; font-weight: bold; text-shadow: 2px 2px #000; pointer-events: none; }
+        #startMenu { position: absolute; top: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.8); display: flex; flex-direction: column; justify-content: center; align-items: center; z-index: 100; }
+        button { padding: 15px 40px; font-size: 20px; background: #f1c40f; border: none; border-radius: 5px; cursor: pointer; font-weight: bold; }
+    </style>
+</head>
+<body>
+    <div id="startMenu">
+        <h1 style="color: white;">3D CAR RACER 🏎️</h1>
+        <button onclick="startRacing()">RACE START!</button>
+    </div>
+    <div id="gameGui">Score: <span id="score">0</span></div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+
+    <script>
+        let scene, camera, renderer, car, obstacles = [], isPlaying = false;
+        let score = 0, speed = 0.5, lane = 0;
+
+        function startRacing() {
+            document.getElementById('startMenu').style.display = 'none';
+            isPlaying = true;
+            init();
+        }
+
+        function createCar(color, isPlayer = false) {
+            const carGroup = new THREE.Group();
+            // Body
+            const body = new THREE.Mesh(new THREE.BoxGeometry(1.2, 0.6, 2.5), new THREE.MeshPhongMaterial({color: color}));
+            body.position.y = 0.5;
+            carGroup.add(body);
+            // Cabin
+            const cabin = new THREE.Mesh(new THREE.BoxGeometry(0.9, 0.5, 1.2), new THREE.MeshPhongMaterial({color: 0x333333}));
+            cabin.position.set(0, 0.9, -0.2);
+            carGroup.add(cabin);
+            // Wheels
+            const wheelGeo = new THREE.CylinderGeometry(0.3, 0.3, 0.2, 16);
+            const wheelMat = new THREE.MeshPhongMaterial({color: 0x111111});
+            const positions = [[-0.7,0.3,0.8], [0.7,0.3,0.8], [-0.7,0.3,-0.8], [0.7,0.3,-0.8]];
+            positions.forEach(p => {
+                const w = new THREE.Mesh(wheelGeo, wheelMat);
+                w.rotation.z = Math.PI/2;
+                w.position.set(p[0], p[1], p[2]);
+                carGroup.add(w);
+            });
+            return carGroup;
+        }
+
+        function init() {
+            scene = new THREE.Scene();
+            scene.background = new THREE.Color(0x22aaee); // Sky Blue
+            scene.fog = new THREE.Fog(0x22aaee, 10, 50);
+
+            camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+            renderer = new THREE.WebGLRenderer({ antialias: true });
+            renderer.setSize(window.innerWidth, window.innerHeight);
+            document.body.appendChild(renderer.domElement);
+
+            scene.add(new THREE.AmbientLight(0xffffff, 0.6));
+            const sun = new THREE.DirectionalLight(0xffffff, 1);
+            sun.position.set(5, 10, 5);
+            scene.add(sun);
+
+            // Road with lanes
+            const roadGeo = new THREE.PlaneGeometry(10, 1000);
+            const roadMat = new THREE.MeshPhongMaterial({color: 0x444444});
+            const road = new THREE.Mesh(roadGeo, roadMat);
             road.rotation.x = -Math.PI / 2;
             scene.add(road);
 
-            // Real Player Character
-            player = createHumanoid(0x0000ff); // Blue Warrior
-            scene.add(player);
+            // Player Car
+            car = createCar(0xff0000, true);
+            scene.add(car);
 
-            // Add Enemies (Villains)
-            for(let i = 1; i < 15; i++) {
-                createEnemy(-40 * i);
-                createGate(-25 * i);
-            }
+            camera.position.set(0, 4, 8);
+            camera.lookAt(0, 0, 0);
 
-            camera.position.set(0, 6, 10);
+            spawnObstacles();
             animate();
         }
 
-        function createEnemy(z) {
-            const villain = createHumanoid(0xff0000); // Red Villain
-            villain.position.set(Math.random() * 6 - 3, 0, z);
-            scene.add(villain);
-            enemies.push(villain);
-        }
-
-        function createGate(z) {
-            const gateGeo = new THREE.BoxGeometry(4, 3, 0.2);
-            const gateMat = new THREE.MeshStandardMaterial({ color: 0x00ff00, transparent: true, opacity: 0.5 });
-            const gate = new THREE.Mesh(gateGeo, gateMat);
-            gate.position.set(Math.random() * 4 - 2, 1.5, z);
-            gate.userData = { value: 2 };
-            scene.add(gate);
-            gates.push(gate);
+        function spawnObstacles() {
+            setInterval(() => {
+                if(!isPlaying) return;
+                const obs = createCar(Math.random() * 0xffffff);
+                obs.position.set((Math.random() - 0.5) * 7, 0, -50);
+                scene.add(obs);
+                obstacles.push(obs);
+            }, 1000);
         }
 
         function animate() {
-            if (!isStarted) return;
+            if(!isPlaying) return;
             requestAnimationFrame(animate);
 
-            player.position.z -= 0.25;
-            player.position.x += (moveX - player.position.x) * 0.1;
-            camera.position.z = player.position.z + 10;
-            camera.lookAt(player.position.x, 1, player.position.z - 5);
+            // Speed up
+            speed += 0.0001;
+            score += 1;
+            document.getElementById('score').innerText = Math.floor(score/10);
 
-            // Logic for Gates
-            gates.forEach((gate, i) => {
-                if (player.position.distanceTo(gate.position) < 2) {
-                    score *= gate.userData.value;
-                    document.getElementById('score').innerText = score;
-                    scene.remove(gate);
-                    gates.splice(i, 1);
+            // Obstacle logic
+            obstacles.forEach((o, i) => {
+                o.position.z += speed + 0.2;
+                if(o.position.z > 10) {
+                    scene.remove(o);
+                    obstacles.splice(i, 1);
+                }
+                // Collision
+                if(car.position.distanceTo(o.position) < 1.5) {
+                    isPlaying = false;
+                    alert("CRASH! Game Over. Final Score: " + Math.floor(score/10));
+                    location.reload();
                 }
             });
 
-            // Logic for Villains
-            enemies.forEach((en, i) => {
-                if (player.position.distanceTo(en.position) < 1.5) {
-                    score -= 5; // Dushman se takrane par army kam hogi
-                    document.getElementById('score').innerText = Math.max(0, score);
-                    scene.remove(en);
-                    enemies.splice(i, 1);
-                }
-            });
-
-            if(score <= 0) { alert("Game Over! Villains Won!"); location.reload(); }
             renderer.render(scene, camera);
         }
 
-        window.addEventListener('touchmove', e => moveX = ((e.touches[0].clientX/window.innerWidth)*2-1)*4);
-        window.addEventListener('mousemove', e => moveX = ((e.clientX/window.innerWidth)*2-1)*4);
+        // Steering
+        window.addEventListener('touchmove', e => {
+            let x = (e.touches[0].clientX / window.innerWidth) * 2 - 1;
+            car.position.x = x * 4;
+        });
+        window.addEventListener('mousemove', e => {
+            let x = (e.clientX / window.innerWidth) * 2 - 1;
+            car.position.x = x * 4;
+        });
     </script>
 </body>
 </html>
